--- a/GA_application/GA_application/MainWindow.xaml
+++ b/GA_application/GA_application/MainWindow.xaml
@@ -4,9 +4,43 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GA_application"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-       
+        Title="MainWindow" Height="470.418" Width="800">
+    <Grid Margin="-2,0,2,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="110*"/>
+            <RowDefinition Height="110*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="17*"/>
+        </Grid.ColumnDefinitions>
+        <lvc:CartesianChart Name="A" Series="{Binding functionGraph}" LegendLocation="Right" Margin="10" >
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Value Y" LabelFormatter="{Binding YFormatterFunction}"></lvc:Axis>
+            </lvc:CartesianChart.AxisY>
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Value X" Labels="{Binding labelsFunction}"></lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>
+
+        <lvc:CartesianChart Name="B" Series="{Binding errorGraph}" LegendLocation="Right" Margin="10,10,10,10" Grid.Column="1" >
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Error" LabelFormatter="{Binding YFormatterError}"></lvc:Axis>
+            </lvc:CartesianChart.AxisY>
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Generations" Labels="{Binding labelsError}"></lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>
+
+        <lvc:CartesianChart Name="C" Series="{Binding fitnessGraph}" LegendLocation="Right" Margin="10,10,10,10" Grid.Column="1" Grid.Row="1" >
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Fitness" LabelFormatter="{Binding YFormatterFitness}"></lvc:Axis>
+            </lvc:CartesianChart.AxisY>
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Generations" Labels="{Binding labelsFitness}"></lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>
     </Grid>
 </Window>
